syntax = "proto3";

package api;

option go_package = "./";

service Ordering {
    rpc MakeOrder (OrderInfo) returns (OrderStatus) {}
}

message OrderInfo {
    int32 gameName = 1; //название игры, которую хочет заказчик.
    int32 fio = 2; //ФИО заказчика

}


message OrderStatus {
    int32 Status = 1;
}